re PR tree-optimization/57864 (ICE in bitmap_set_replace_value, at tree-ssa-pre.c:862)

2014-05-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57864
	* tree-ssa-pre.c (phi_translate_1): Backport NAME case
	simplification from mainline.  Do not lookup the VN
	value-number here.

	* gcc.dg/torture/pr57864.c: New testcase.

From-SVN: r210144